fixed path spaces bug using processBuilder,added error handlig in all supervision actions